# AssetsTools.NET

./: .gitignore  AssetTools.NET.sln  AssetsTools.NET.diff  CMakeLists.txt  LICENSE  NuGet.Config  README.md  README.md.old
.github/workflows/: dotnet.yml
AssetTools.NET/: AssetsTools.NET.csproj  AssetsTools.NET.nuspec  packages.config
AssetTools.NET/Extra/: AssetClassID.cs  AssetHelper.cs  AssetID.cs  AssetWriters.cs  BundleCreator.cs  BundleHelper.cs  Crc32Helper.cs  HalfHelper.cs  Net35Polyfill.cs  SegmentStream.cs  UnityVersion.cs  ValueBuilder.cs
AssetTools.NET/Properties/: AssemblyInfo.cs
AssetTools.NET/Standard/: AssetTypeClass.cs  AssetsBundleFileFormat.cs  AssetsFileFormat.cs  AssetsFileReader.cs  AssetsFileTable.cs  AssetsReplacer.cs  ClassDatabaseFile.cs  ConcurrentDictionary.cs  defines.cs
AssetsTools.NET.Cpp2IL/: AssetsTools.NET.Cpp2IL.csproj  AssetsTools.NET.Cpp2IL.nuspec  Cpp2IlTempGenerator.cs  Extensions.cs  FindCpp2IlFiles.cs  ParsedCustomAttrData.cs  TypeDefWithSelfRef.cs
AssetsTools.NET.MonoCecil/: AssetsTools.NET.MonoCecil.csproj  AssetsTools.NET.MonoCecil.nuspec  MonoCecilTempGenerator.cs  TypeDefWithSelfRef.cs
AssetsTools.NET.Tests/: AssetsTools.NET.Tests.csproj  Texture.cs  Tpk.cs  Util.cs
AssetsTools.NET.Texture/: AssetsTools.NET.Texture.csproj  AssetsTools.NET.Texture.nuspec  ImageExportType.cs  Texture2DAssetReplacer.cs  TextureFile.cs  TextureFormat.cs  TextureOperations.cs
AssetsTools.NET.Texture/Swizzle/: ISwizzler.cs  SwitchPlatformBlob.cs  SwitchSwizzle.cs  SwizzleType.cs
AssetsTools.NET.Texture/TextureDecoders/: BC7BitReader.cs  BC7Decoder.cs  BPTCTables.cs  CrunchDecoder.cs  DXTDecoders.cs  DivisionTables.cs  ETCDecoders.cs  ETCTables.cs  HalfHelper.cs  RGBADecoders.cs
AssetsTools.NET.Texture/TextureEncoders/: RGBAEncoders.cs  TextureEncoderWrapper.cs
AssetsTools.NETTester/: AssetsTools.NETTester.csproj  Form1.Designer.cs  Form1.cs  Program.cs
AssetsTools.NETTester/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
AssetsView/: App.config  AssetsView.csproj  Program.cs
AssetsView/AssetHelpers/: AssetInfo.cs  AssetSorter.cs
HelloWorld/: HelloWorld.csproj  Program.cs
TextureEncoder/: CMakeLists.txt  TextureEncoder.cpp  TextureEncoder.h  TextureFormat.h  pvrtlstub.c
TobyCopy/: DependencyCrawler.cs  ResourceRange.cs  TobyCopier.cs  TobyCopy.csproj  TypeTreeCopier.cs
UABE.NET/: Program.cs  UABE.NET.csproj  packages.config
(+273 files in other folders)
